[package]
name = "custom-deno-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = { version = "0.156.0" }
deno_runtime = { version = "0.82.0" }
tokio = { version = "1.20", features = ["full"] }